fix horizontal scrollbar showing up on homepage

--- a/tests/dummy/app/styles/app.less
+++ b/tests/dummy/app/styles/app.less
@@ -16,7 +16,6 @@ html, body {
 }
 
 .home {
-  width: 100vw;
   height: 100vh;
   background-image: url(/oss.png);
   background-repeat: no-repeat;
